added audio file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <audio controls autoplay>
+        <source src="./audio/retreat (1).mp3" type="audio/mpeg">
+    </audio>
     <header>
         <div class="header-title-container">
             <h1>Hunt The Ghost</h1>
