updated audio player

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-    <audio controls autoplay>
-        <source src="./audio/retreat (1).mp3" type="audio/mpeg">
-    </audio>
+    <div class="card-audio">
+        <audio controls>
+            <source src="./audio/retreat (1).mp3" type="audio/mpeg">
+            <source src="./audio/retreat (2).mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
     <header>
         <div class="header-title-container">
             <h1>Hunt The Ghost</h1>
