added loop for aduio

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
     <div class="card-audio">
-        <audio controls>
+        <audio controls loop>
             <source src="./audio/retreat (1).mp3" type="audio/mpeg">
-            <source src="./audio/retreat (2).mp3" type="audio/mpeg">
         </audio>
     </div>
 
