--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunt The Ghost Game</title>
+    <title>Hunt The Ghost</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="card-audio">
-        <audio controls loop>
-            <source src="./audio/retreat (1).mp3" type="audio/mpeg">
-        </audio>
-    </div>
+    <video autoplay muted class="myVideo">
+        <source src="./video/COD INTRO.mp4" type="video/mp4">
+    </video>
 
     <header>
         <div class="header-title-container">
